samples/_failures_safe/1761423463_45c2ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbf5439b.c: In function ‘main’:
./samples/SAFE/__tmp_dbf5439b.c:156:43: error: missing terminating " character
  156 |                     print_matrix(&result, "A +
      |                                           ^~~~
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected expression at end of input
  156 |                     print_matrix(&result, "A +
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbf5439b.c:156:21: error: expected declaration or statement at end of input
